2010-10-12  Brian Gough  <bjg@gnu.org>

	* pow_int.c (gsl_pow_uint): added function gsl_pow_uint(x,n) for
	unsigned n (larger range)
	(gsl_pow_int): handle case where n=MIN_INT correctly

2010-02-15  Brian Gough  <bjg@network-theory.co.uk>

	* infnan.c: use #error if gsl_isnan or gsl_finite cannot be defined

2009-08-21  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): move x/=2 outside test of while loops because it
	is (possibly) not volatile.

2008-10-13  Brian Gough  <bjg@network-theory.co.uk>

	* log1p.c: use gsl_sys.h header file

	* infnan.c: use gsl_sys.h header file

	* hypot.c: use gsl_sys.h header file

	* fdiv.c: use gsl_sys.h header file

	* coerce.c: use gsl_sys.h header file

2008-10-08  Brian Gough  <bjg@network-theory.co.uk>

	* infnan.c (gsl_isinf): handle the case where isinf(-inf) 
	returns	+1

2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* prec.c: compile inline functions from header here

	* pow_int.c: compile inline functions from header here

	* minmax.c: compile inline functions from header here

2008-03-18  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): use volatile to avoid extended precision in loop

	* ldfrexp.c (gsl_ldexp): added a test for x==0

2007-11-04  Brian Gough  <bjg@network-theory.co.uk>

	* ldfrexp.c (gsl_ldexp): handle full range of double precision
	(gsl_frexp): handle full range of double precision

2007-07-30  Brian Gough  <bjg@network-theory.co.uk>

	* infnan.c (gsl_finite): use isfinite (c99) in preference to
	finite

2007-07-23  Brian Gough  <bjg@network-theory.co.uk>

	* log1p.c (gsl_log1p): added another volatile to prevent unwanted
	optimisation

2007-04-03  Brian Gough  <bjg@r51e.network-theory.co.uk>

	* infnan.c (gsl_isinf): now return -1 for -Inf instead of +1

	* test.c (main): add test for -inf

	* infnan.c (gsl_finite): always use finite where available
	(gsl_isnan): always use isnan where available
	(gsl_isinf): always use isinf where available
